# ajax-catalyst

./: CMakeLists.txt  README.md
client/: CMakeLists.txt
client/include/AjaxCatalyst/Client/: Client.h
client/src/: Client.cpp  main.cpp
server/: CMakeLists.txt
server/include/AjaxCatalyst/Server/: Server.h
server/src/: Server.cpp  main.cpp
